# endless-game-runner

./: .gitattributes  .gitignore  1.tscn  2.tscn  DeathScreen.tscn  Endgame.tscn  README.md  StartScreen.tscn  StartScreen2.tscn  Startscreen.tscn  city.tscn  coin.tscn  coin.tscn4008882961.tmp  end_game.gd  end_game.gd.uid  export_presets.cfg  icon.svg.import  main.tscn  main.tscn15715480344.tmp  main.tscn27004057714.tmp  metadata.json  package-lock.json  package.json  player.tscn  project.godot  score.gd  score.gd.uid
assets/: 3226276.jpg.import  4561977.jpg.import  6154836.jpg.import  CITY.glb.import  CITY_Image_0.jpg.import  CITY_Image_1.jpg.import  CITY_Image_10.jpg.import  CITY_Image_11.jpg.import  CITY_Image_12.png.import  CITY_Image_13.jpg.import  CITY_Image_14.png.import  CITY_Image_15.png.import  CITY_Image_16.jpg.import  CITY_Image_17.jpg.import  CITY_Image_18.jpg.import  CITY_Image_19.png.import  CITY_Image_2.jpg.import  CITY_Image_20.jpg.import  CITY_Image_4.jpg.import  CITY_Image_5.jpg.import  CITY_Image_6.jpg.import  CITY_Image_7.png.import  CITY_Image_8.jpg.import  CITY_Image_9.jpg.import  spacecraft.glb.import  spacecraft_0.jpg.import
backend/: index.js  package.json  run.py
frontend/: craco.config.js  package.json
frontend_surf/: .env  (+3 more)
surf/programs/surf/: Cargo.toml
surf/programs/surf/src/: errors.rs  lib.rs
surf/programs/surf/src/instructions/: buy_nft.rs  init_Player.rs  list_nft.rs  mint_nft.rs  mod.rs  update_nft.rs  update_player.rs
surf/programs/surf/src/states/: custom_vector.rs  escrow.rs  mod.rs  nft_authority.rs  player_data.rs
(+96 files in other folders)
